--- a/app/Views/users.html
+++ b/app/Views/users.html
@@ -1,7 +1,7 @@
 {% extends layouts/layout %}
 {% block title %} - User Management{% endblock %}
 {% block content %}
-<div class="container">
+<div class="container my-5 py-2">
     <div class="row">
         <div class="col-md-12">
             <div class="table-responsive">
