--- a/app/Views/auth/login.html
+++ b/app/Views/auth/login.html
@@ -1,7 +1,7 @@
 {% extends layouts/layout %}
 {% block title %} - User Login{% endblock %}
 {% block content %}
-    <div class="container">
+    <div class="container my-5 py-2">
         <div class="row">
             <div class="col-md-6 card-header">
                 <h3 class="text text-info">Account Manager - Login</h3>
