--- a/app/Views/layouts/navbar.html
+++ b/app/Views/layouts/navbar.html
@@ -47,7 +47,7 @@
 
     <div class="px-3 py-2 border-bottom mb-3">
         <div class="container d-flex flex-wrap justify-content-center">
-            <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search">
+            <form class="w-50 me-3 col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search">
                 <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
             </form>
             <div class="text-end">
@@ -55,8 +55,20 @@
                 <a href="{% baseurl() %}/auth/login" class="btn btn-light text-dark me-2">Login</a>
                 <a href="{% baseurl() %}/auth/signup" class="btn btn-primary">Sign-up</a>
                 @user
-                <a href="{{ userlink }}" class="btn btn-light text-dark me-2">Auth('user')</a>
-                <a href="{% baseurl() %}/auth/sign-out" class="btn btn-primary">Sign Out</a>
+                <div class="flex-shrink-0 dropdown">
+                    <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        
+                        <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                    </a>
+
+                    <ul class="dropdown-menu text-small shadow" style="">
+                        <li><a class="dropdown-item" href="#">Inbox</a></li>
+                        <li><a class="dropdown-item" href="{{ userlink }}/settings">Settings</a></li>
+                        <li><a class="dropdown-item" href="{{ userlink }}">Profile</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="{% baseurl() %}/auth/sign-out">Sign out</a></li>
+                    </ul>
+                </div>
                 @endguest
             </div>
         </div>
