--- a/app/Views/auth/login.html
+++ b/app/Views/auth/login.html
@@ -1,25 +1,59 @@
 {% extends layouts/layout %}
 {% block title %} - User Login{% endblock %}
 {% block content %}
-<div class="container my-5 py-2">
-    <form action="{% baseurl() %}/auth/login" method="post" accept-charset="UTF-8">
-        <div class="mb-3">
-            <label for="inputEmail" class="form-label">Email address</label>
-            <input type="email" name="user_email" class="form-control" id="inputEmail" aria-describedby="emailHelp" required />
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-        </div>
-        <div class="mb-3">
-            <label for="passwordBlock" class="form-label">Password</label>
-            <input type="password" name="user_password" class="form-control" id="passwordBlock"  aria-describedby="passwordHelpBlock" required />
-            <div id="passwordHelpBlock" class="form-text">
-                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+<div class="container py-2">
+    <div class="card">
+        <div class="card-header">
+            <div class="row">
+                <div class="col mx-1 pt-1">
+                    Sign in to your account!
+                </div>
+                
+                <div class="d-flex justify-content-end col">
+                    <span class="mx-1 pt-1">or sign up with: </span>
+                    <a href="@api_route('google')" class="btn signup-btn btn-sm btn-link btn-floating mx-1"><i class="bi bi-google"></i></a>
+                    <a href="@api_route('apple')" class="btn signup-btn btn-sm btn-link btn-floating mx-1"><i class="bi bi-apple"></i></a>
+                    <a href="@api_route('github')" class="btn signup-btn btn-sm btn-link btn-floating mx-1"><i class="bi bi-github"></i></a>
+                </div>
             </div>
         </div>
-        <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        <div class="card-body">
+            <div class="row">
+                <div class="col col-md-8 col-lg d-flex justify-content-center">
+                    <form action="{% baseurl() %}/auth/login" method="post" accept-charset="UTF-8">
+                        <div class="mb-3">
+                            <label for="inputEmail" class="form-label">Email address</label>
+                            <input type="email" name="user_email" class="form-control" id="inputEmail" aria-describedby="emailHelp" required />
+                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="passwordBlock" class="form-label">Password</label>
+                            <input type="password" name="user_password" class="form-control" id="passwordBlock"  aria-describedby="passwordHelpBlock" required />
+                            <div id="passwordHelpBlock" class="form-text">
+                                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                            </div>
+                        </div>
+                        <div class="row mb-4">
+                            <div class="col d-flex justify-content-center">
+                                <!-- Checkbox -->
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="save_login" checked />
+                                    <label class="form-check-label" for="save_login"> Remember me </label>
+                                </div>
+                            </div>
+                            <div class="col d-flex justify-content-center">
+                                <!-- Simple link -->
+                                <a href="#!">Forgot password?</a>
+                            </div>
+                            <div class="d-flex justify-content-center mt-3">
+                                <button type="button" data-mdb-button-init="" data-mdb-ripple-init=""  style="width: 70%" class="btn btn-primary btn-block mb-4" data-mdb-button-initialized="true">Sign in</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mt-3">Don't have an account?&nbsp;&nbsp;<a href="{{ home_url() }}/auth/signup">Register here</a></div>
         </div>
-        <button type="submit" class="btn btn-primary">Confirm identity</button>
-    </form>
+    </div>
 </div>
 {% endblock %}
