--- a/app/Views/layouts/layout.html
+++ b/app/Views/layouts/layout.html
@@ -14,6 +14,9 @@
 <body>
     {% include layouts/navbar %}
     <div class="container-fluid">
+        <!-- Breadcrumb -->
+        {% include layouts/breadcrumb %}
+        <!-- /Breadcrumb -->
         {% yield content %}
     </div>
 </body>
