--- a/public/assets/bootstrap/css/style.css
+++ b/public/assets/bootstrap/css/style.css
@@ -22,3 +22,80 @@ img.card-img-top {
     font-family: Arial, sans-serif;
     clear: both;
 }
+
+li.breadcrumb-item::before {
+    content: "" !important;
+}
+
+.breadcrumb-item::before {
+    float: left;
+    padding-right: 0 !important;
+    color: var(--bs-breadcrumb-divider-color);
+    content: var(--bs-breadcrumb-divider, " ") !important;
+}
+
+body{
+    margin-top: 0px;
+    color: #1a202c;
+    text-align: left;
+    background-color: #e2e8f0 !important;    
+}
+
+.main-body {
+    padding: 15px;
+}
+
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
+
+header > div {
+    background: #fcfcfc;
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid transparent;
+    border-radius: .25rem;
+    margin-bottom: 1.5rem;
+    box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
+}
+
+.me-2 {
+    margin-right: .5rem!important;
+}
+
+.breadcrumb-item+.breadcrumb-item {
+    padding-left: 0 !important;
+}
+
+li.breadcrumb-item {
+    margin-right: 5px;
+    margin-left: 3px
+}
+
+li.breadcrumb-item::first {
+    margin-right: 4px;
+    margin-left: 0;
+}
+
+li.breadcrumb-item::last {
+    margin-right: 0px;
+    margin-left: 0;
+}
+
+.signup-btn { 
+    background: #dee2e6 !important;
+    color: #343a40 !important;
+}
+
+.signup-btn:hover {
+    background: #e7e7e7 !important;
+    color: #0a58ca !important;
+}
