--- a/app/Views/auth/signup.html
+++ b/app/Views/auth/signup.html
@@ -19,6 +19,9 @@
         </div>
         <div class="card-body">
             <div class="row justify-content-center">
+                <!-- Alerts -->
+                {% include components/alerts/alert %}
+                <!-- /Alerts -->
                 <div class="col-10">
                     <form action="{{ home_url() }}/auth/signup" method="post" accept-charset="UTF-8">
                         <div class="row">
