Fix Session class and database !

--- a/app/Views/layouts/navbar.html
+++ b/app/Views/layouts/navbar.html
@@ -1,4 +1,4 @@
-<header>
+<div class="header">
     <div class="px-3 py-2 text-bg-dark border-bottom">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -73,4 +73,4 @@
             </div>
         </div>
     </div>
-</header>
+</div>
