--- a/public/assets/bootstrap/css/style.css
+++ b/public/assets/bootstrap/css/style.css
@@ -49,7 +49,7 @@ body{
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
 }
 
-header > div {
+.header > div {
     background: #fcfcfc;
 }
 
